Bug 474912 - Alt Gr key not working
Summary: Alt Gr key not working
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 475524 475974 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-26 17:52 UTC by Jeshuá
Modified: 2023-11-26 11:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-1877334-0.html (1.79 KB, text/html)
2023-09-27 14:00 UTC, Jeshuá
Details
attachment-2135150-0.html (2.00 KB, text/html)
2023-09-29 14:40 UTC, Jeshuá
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeshuá 2023-09-26 17:52:59 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Press Alt Gr plus any keys for short cut


OBSERVED RESULT
The Alt Gr key doesn't work. Pressing Ctrl+Alt sepparetely works just fine, but it slows down my process since I put the alt gr as a shortcut for the letters on the right side of the keyboard so I could do it with one hand and faster. I've tested the key on two online keyboard testers and it is working ok, it's only on Krita Nightly that it doesn't work. On Krita 5.1.5 it's working fine

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2023-09-27 06:24:34 UTC
Hi, Joshuá!

Could you please try Krita 5.2.0 RC1 build? We did one significant change in how we handle AltGr in this version, perhaps the bug would be fixed for you now?

https://krita.org/en/item/krita-5-2-release-candidate-is-out/
Comment 2 Jeshuá 2023-09-27 14:00:09 UTC
Created attachment 161909 [details]
attachment-1877334-0.html

Hi Dmitry!
Thanks for the response. I installed the version you suggested, but it
still has the same bug.


Em qua., 27 de set. de 2023 às 03:24, Dmitry Kazakov <
bugzilla_noreply@kde.org> escreveu:

> https://bugs.kde.org/show_bug.cgi?id=474912
>
> Dmitry Kazakov <dimula73@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>          Resolution|---                         |WAITINGFORINFO
>              Status|REPORTED                    |NEEDSINFO
>                  CC|                            |dimula73@gmail.com
>
> --- Comment #1 from Dmitry Kazakov <dimula73@gmail.com> ---
> Hi, Joshuá!
>
> Could you please try Krita 5.2.0 RC1 build? We did one significant change
> in
> how we handle AltGr in this version, perhaps the bug would be fixed for you
> now?
>
> https://krita.org/en/item/krita-5-2-release-candidate-is-out/
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Bug Janitor Service 2023-09-28 03:46:15 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 4 Dmitry Kazakov 2023-09-29 07:47:41 UTC
Hi, Jeshuá!

Do I understand it right that you are using Windows and trying to use AltGr key as a shortcut for Ctrl+Alt?

The point is that in Krita 5.2.x we had to change the way we handle AltGr key. Now we don't handle that as Ctrl+Alt, but process it as a raw AltGr. Without this change Krita had issues when typing special symbols with AltGr key in input boxes (bug 468566).

Could you try changing/adding your shortcut in the Canvas Input Settings and add an explicit AltGr key instead of Ctrl+Alt combination? Just press AltGr key when setting up the shortcut and it will show itself in the dialog.
Comment 5 Jeshuá 2023-09-29 14:40:25 UTC
Created attachment 161952 [details]
attachment-2135150-0.html

Hi Dmitry
Yes, I'm using Windows 10. I've tried what you said both times, the key is
just not recognized by Krita, I keep pressing it, but it doesn't add
anything to the shortcut.

Em sex., 29 de set. de 2023 às 04:47, Dmitry Kazakov <
bugzilla_noreply@kde.org> escreveu:

> https://bugs.kde.org/show_bug.cgi?id=474912
>
> Dmitry Kazakov <dimula73@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|REPORTED                    |NEEDSINFO
>          Resolution|---                         |WAITINGFORINFO
>
> --- Comment #4 from Dmitry Kazakov <dimula73@gmail.com> ---
> Hi, Jeshuá!
>
> Do I understand it right that you are using Windows and trying to use
> AltGr key
> as a shortcut for Ctrl+Alt?
>
> The point is that in Krita 5.2.x we had to change the way we handle AltGr
> key.
> Now we don't handle that as Ctrl+Alt, but process it as a raw AltGr.
> Without
> this change Krita had issues when typing special symbols with AltGr key in
> input boxes (bug 468566).
>
> Could you try changing/adding your shortcut in the Canvas Input Settings
> and
> add an explicit AltGr key instead of Ctrl+Alt combination? Just press
> AltGr key
> when setting up the shortcut and it will show itself in the dialog.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 6 Bug Janitor Service 2023-09-30 03:46:20 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 7 Dmitry Kazakov 2023-10-02 07:30:53 UTC
Hi, Jeshuá!

Are you using French keyboard layout right?

(I use US-international and it generates a separate event for Krita; French layout has a bit different behavior though...)
Comment 8 Halla Rempt 2023-10-12 15:57:48 UTC
*** Bug 475524 has been marked as a duplicate of this bug. ***
Comment 9 Lynx3d 2023-10-23 18:34:25 UTC
*** Bug 475974 has been marked as a duplicate of this bug. ***
Comment 10 Bug Janitor Service 2023-11-22 13:29:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2004
Comment 11 Dmitry Kazakov 2023-11-22 13:30:08 UTC
Git commit 8d8c6fd4c9a1232e098dd44176ae4bb53811b93d by Dmitry Kazakov.
Committed on 22/11/2023 at 14:22.
Pushed by dkazakov into branch 'master'.

Make sure that AltGr-based shortcuts are working properly

We should filter them out in text boxes on teh level of ShortcutOverride
events. The check for Qt::Key_Escape value is from
QWidgetLineControl::processShortcutOverrideEvent().

M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +1    -1    krita/main.cc
M  +7    -1    libs/flake/KoToolProxy.cpp

https://invent.kde.org/graphics/krita/-/commit/8d8c6fd4c9a1232e098dd44176ae4bb53811b93d
Comment 12 Dmitry Kazakov 2023-11-26 11:54:48 UTC
Git commit 21a09c6e20c7cd38bce32e9c723ecee99e43b580 by Dmitry Kazakov.
Committed on 26/11/2023 at 12:53.
Pushed by dkazakov into branch 'krita/5.2'.

Make sure that AltGr-based shortcuts are working properly

We should filter them out in text boxes on teh level of ShortcutOverride
events. The check for Qt::Key_Escape value is from
QWidgetLineControl::processShortcutOverrideEvent().

M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +1    -1    krita/main.cc
M  +7    -1    libs/flake/KoToolProxy.cpp

https://invent.kde.org/graphics/krita/-/commit/21a09c6e20c7cd38bce32e9c723ecee99e43b580