Make sure that AltGr-based shortcuts are working properly

We should filter them out in text boxes on teh level of ShortcutOverride
events. The check for Qt::Key_Escape value is from
QWidgetLineControl::processShortcutOverrideEvent().

BUG:474912